First appraisal of prediction accuracies.

--- a/env.yml
+++ b/env.yml
@@ -14,5 +14,11 @@ dependencies:
   - joblib
   - xgboost
   - pyarrow
+  - jupyterlab
+  - nbconvert
+  - r
+  - r-data.table
+  - r-ggplot2
+  - 
   - pip:
     - bacdive
