--- a/env.yml
+++ b/env.yml
@@ -3,7 +3,7 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - python>=3.7
+  - python>=3.10
   - pip
   - pandas
   - ipython
@@ -20,5 +20,9 @@ dependencies:
   - r-data.table
   - r-ggplot2
   - r-irkernel
+  - shap
+  - ipywidgets
+  - matplotlib
+  - r-caret
   - pip:
     - bacdive
