--- a/env.yml
+++ b/env.yml
@@ -24,5 +24,10 @@ dependencies:
   - ipywidgets
   - matplotlib
   - r-caret
+  # Below for 17_apply
+  - extern
+  - eggnog-mapper==2.1.3 # Pinned for repeatability
+  - hmmer
+  - bird_tool_utils_python
   - pip:
     - bacdive
