--- a/env.yml
+++ b/env.yml
@@ -24,10 +24,11 @@ dependencies:
   - ipywidgets
   - matplotlib
   - r-caret
+  - plotnine
   # Below for 17_apply
   - extern
   - eggnog-mapper==2.1.3 # Pinned for repeatability
   - hmmer
   - bird_tool_utils_python
   - pip:
-    - bacdive
+      - bacdive
